--- a/Module 1/Boot Strap Project/home.html
+++ b/Module 1/Boot Strap Project/home.html
@@ -79,7 +79,7 @@
         <div class="row justify-content-center">
 
           <!-- DOG CARD -->
-          <div class="card border-0">
+          <div class="card border-0 option-card">
             <img src="dogYellow1.jpg" class="card-img" alt="...">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h3 class="card-title text-center text-white">D O G S</h3>
@@ -87,7 +87,7 @@
           </div>
 
           <!-- CAT CARD -->
-          <div class="card border-0">
+          <div class="card border-0 option-card">
             <img src="catBlue1.jpg" class="card-img" alt="...">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h3 class="card-title text-center text-white">C A T S</h3>
