added bottom link to go back to the top when clicked

--- a/Module 1/Boot Strap Project/home.html
+++ b/Module 1/Boot Strap Project/home.html
@@ -70,7 +70,7 @@
 
 
       <!-- DISPLAY IMAGE -->
-      <div class="main-image m-0 col-12 align-self-start text-center">
+      <div id = "display-image"class="main-image m-0 col-12 align-self-start text-center">
         <div class="main-image-info">
           <h1>WELCOME TO PET SHOP</h1>
           <p>Where you can find all your pet needs</p>
@@ -245,7 +245,8 @@
     
 
       <div class="footer col-12 align-self-start text-center m-0 p-3">
-        BACK TO TOP
+        <a href="#display-image">BACK TO TOP</a>
+        
       </div>
 
 
